2009-05-21  Hans Boehm <Hans.Boehm@hp.com> 
	* win32_threads.c (GC_new_thread): Make first_thread
	visible to the whole file.
	(UNPROTECT): New macro.
	(GC_push_stack_for, GC_suspend, GC_start_world): unprotect
	thread structures before writing.
	(GC_suspend): Acquire GC_fault_handler_lock before suspending
	thread.
	* os_dep.c: export GC_fault_handler_lock.
	(GC_remove_protection): Check if already unprotected.

2009-05-20  Hans Boehm <Hans.Boehm@hp.com> (really Ivan Maidanski)
	* doc/README.win32: Add OpenWatcom warning.
	* include/private/gcconfig.h: Really check it in.

2009-05-19  Hans Boehm <Hans.Boehm@hp.com> (Mostly Ivan Maidanski, Dave Korn)
	* os_dep.c (GC_get_stack_base, windows): Replace with Dave Korn's
	code from gcc version.
	* os_dep.c: make gc compilable (optionally) for Cygwin with
	GetWriteWatch-based virtual dirty bit implementation ("os_dep.c" file). 
	* os_dep.c: Make non-win32 GC_write_fault_handler STATIC.
	* mark.c (GC_noop): fix declaration definition mismatch for DMC.
	* include/private/gcconfig.h: Enable MPROTECT_VDB and GWW_VDB for
	Watcom (Win32 only).  It works.

	and GWW_VDB.  It works.

2009-05-07  Hans Boehm <Hans.Boehm@hp.com> and Mark Sibly
	* mach_dep.c: Don't use __builtin_unwind_init for register
	state on PowerPC/Darwin.

2009-04-24  Hans Boehm <Hans.Boehm@hp.com>
	* doc/gcdescr.html: Improve description of object freelist
	structure.
	* include/private/gc_priv.h: Fix comment for _size_map.

2009-03-16  Hans Boehm <Hans.Boehm@hp.com>
	* os_dep.c (GC_linux_stack_base): Relax sanity test.

2009-03-11  Hans Boehm <Hans.Boehm@hp.com>  (Really Ivan Maidanski)
	* include/private/gc_pmark.h (PUSH_CONTENTS_HDR for
	MARK_BIT_PER_OBJ): Add missing backslash before eoln.

2009-02-28  Hans Boehm <Hans.Boehm@hp.com>
	* misc.c (GC_set_warn_proc): Implicitly intialize GC on
	non-Cygwin win32.

2009-02-28  Hans Boehm <Hans.Boehm@hp.com> (Really Petr Krajca)
	* configure.ac: Enable thread-local allocation for sparc-linux.